--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 </thead>
                 <tbody class = "tableBody">
                 <tr>
-                    <td>Sharath</td>
-                    <td>Bathini</td>
-                    <td>sharathbathini@abc.com</td>
+                    <td>Sreekamalesh</td>
+                    <td>Annapragada</td>
+                    <td>sreekamaleshannapragada@abc.com</td>
                 </tr>
                 <tr>
                     <td>Steve</td>
